--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
         "outDir": "./dist/", //输出目录
         "sourceMap": true,
         "noImplicitAny": true,
-        "module": "commonjs",
+        "module": "es6",
         "target": "es5",
-        "jsx": "react"
+        "jsx": "react",
+        "moduleResolution":"node",
+        "allowSyntheticDefaultImports": true,
     },
     "include": [
         "./client/**/*"
