添加typescript,登录注册接口

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,7 @@
         "react"
     ],
     "plugins": [
-        // "react-hot-loader/babel",
+        "react-hot-loader/babel",
         [
             "import",
             {
