增加token认证,登录,注册

--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "css-loader": "^0.28.10",
     "css-modules-require-hook": "^4.2.3",
     "html-webpack-plugin": "^3.0.4",
+    "jsonwebtoken": "^8.2.0",
     "koa": "^2.5.0",
     "koa-better-http-proxy": "^0.2.4",
     "koa-bodyparser": "^4.2.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.3.1",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
+    "koa-unless": "^1.0.7",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "md5": "^2.2.1",
