--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^0.28.10",
     "css-modules-require-hook": "^4.2.3",
     "html-webpack-plugin": "^3.0.4",
+    "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.2.0",
     "koa": "^2.5.0",
     "koa-better-http-proxy": "^0.2.4",
@@ -43,23 +44,26 @@
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "koa-unless": "^1.0.7",
-    "less": "^3.0.1",
-    "less-loader": "^4.0.6",
     "md5": "^2.2.1",
     "memory-fs": "^0.4.1",
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
     "mysql": "^2.15.0",
+    "node-sass": "^4.8.3",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.2",
     "ts-import-plugin": "^1.4.4",
     "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.0.1",
     "webpack-dev-server": "^3.1.1"
   },
