--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:client": "webpack-dev-server --mode development --config config/webpack.config.client.js",
     "dev:server": "cross-env NODE_ENV=dev node server/app.js",
-    "build:client": "webpack --config config/webpack.config.client.js",
-    "build:server": "webpack --config config/webpack.config.server.js",
+    "build:client": "webpack --mode production --config config/webpack.config.client.js ",
+    "build:server": "webpack --mode production  --config config/webpack.config.server.js ",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "start": "cross-env NODE_ENV=production node server/app.js"
@@ -17,9 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^16.0.40",
-    "@types/react-dom": "^16.0.4",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.2.6",
     "antd": "^3.3.0",
     "autoprefixer": "^8.1.0",
+    "awesome-typescript-loader": "^5.0.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -33,6 +35,7 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
     "css-modules-require-hook": "^4.2.3",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.4",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.2.0",
@@ -54,6 +57,7 @@
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "rimraf": "^2.6.2",
@@ -64,6 +68,7 @@
     "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
     "typings-for-css-modules-loader": "^1.7.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.0.1",
     "webpack-dev-server": "^3.1.1"
   },
