--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:client": "webpack-dev-server --mode development --config config/webpack.config.client.js",
+    "dev:client": "webpack-dev-server  --mode development --config config/webpack.config.client.js",
     "dev:server": "cross-env NODE_ENV=dev node server/app.js",
     "build:client": "webpack --mode production --config config/webpack.config.client.js ",
     "build:server": "webpack --mode production  --config config/webpack.config.server.js ",
     "clear": "rimraf dist",
-    "build": "npm run clear && npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server",
     "start": "cross-env NODE_ENV=production node server/app.js"
   },
   "author": "Ace",
@@ -73,9 +73,12 @@
     "webpack-dev-server": "^3.1.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "react-app-rewired": "^1.5.0",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-manifest-plugin": "^2.0.3"
   }
 }
