--- a/package.json
+++ b/package.json
@@ -16,27 +16,7 @@
   "author": "Ace",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^16.0.40",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-router-dom": "^4.2.6",
     "antd": "^3.3.0",
-    "autoprefixer": "^8.1.0",
-    "awesome-typescript-loader": "^5.0.0",
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-import": "^1.6.6",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-loose": "^8.0.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.10",
-    "css-modules-require-hook": "^4.2.3",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.0.4",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.2.0",
     "koa": "^2.5.0",
@@ -52,14 +32,32 @@
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
     "mysql": "^2.15.0",
-    "node-sass": "^4.8.3",
-    "postcss-flexbugs-fixes": "^3.3.0",
-    "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.1.1",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.2.6",
+    "autoprefixer": "^8.1.0",
+    "css-loader": "^0.28.10",
+    "css-modules-require-hook": "^4.2.3",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.4",
+    "awesome-typescript-loader": "^5.0.0",
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.6.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
@@ -69,16 +67,17 @@
     "typescript": "^2.7.2",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.0.1",
-    "webpack-dev-server": "^3.1.1"
-  },
-  "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.8.3",
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-loader": "^2.1.1",
     "react-app-rewired": "^1.5.0",
     "webpack-cli": "^2.0.10",
-    "webpack-manifest-plugin": "^2.0.3"
+    "webpack-manifest-plugin": "^2.0.3",
+    "webpack": "^4.0.1",
+    "webpack-dev-server": "^3.1.1"
   }
 }
