--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,16 @@
 {
     "presets": [
         [
-            "es2015",
+            "env",
             {
-                "loose": true
+                "targets":{
+                    "browsers": [ ">0.25%", "not ie 11", "not op_mini all"]
+                }
             }
         ],
         "react"
     ],
     "plugins": [
-        "react-hot-loader/babel",
         [
             "import",
             {
